infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pvc
  namespace: default
spec:
  ports:
  - port: 3030
    protocol: TCP
    targetPort: 3030
  selector:
    run: pvc
  type: NodePort
