infra/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pvc-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "pvc-static-ip"
spec:
  backend:
    serviceName: pvc
    servicePort: 3030
